--- a/styles/styles.css
+++ b/styles/styles.css
@@ -41,7 +41,7 @@ body {
 }
 
 .button-search {
-  background-image: url("./images/search.png");
+  background-image: url("https://callbacklater.github.io/weather-app/images/search.png");
   background-position: 2px 2px;
   margin-top: -1px;
   width: 30px;
